Add paging to myResponses
